Tres primeros puntos de la documentacion

--- a/Documentación LaTex/acronimos.tex
+++ b/Documentación LaTex/acronimos.tex
@@ -20,6 +20,12 @@
 \acrodef{IEEE}{Institute of Electrical and Electronics Engineers}
 IEEE: Institute of Electrical and Electronics Engineers
 
+\acrodef{GDD}{Documento de diseño del juego}
+GDD: Documento de diseño del juego
+
+\acrodef{MIT}{Instituto Tecnológico de Massachusetts}
+MIT: Instituto Tecnológico de Massachusetts
+
 \acrodef{TFG}{Trabajo Final de Grado}
 \acrodefplural{TFG}[TFG]{Trabajos Finales de Grado} %NOTA: chequea cómo se hace para usar un plural en un acrónimo, en su versión larga. En su versión corta, Los acrónimos, en castellano, NUNCA se escriben con una "s" al final. ver http://www.rae.es/consultas/plural-de-las-siglas-las-ong-unos-dvd
 TFG: Trabajo Final de Grado
