--- a/Documentación LaTex/capitulos/Introduccion.tex
+++ b/Documentación LaTex/capitulos/Introduccion.tex
@@ -1,25 +1,28 @@
 \chapter{Introducción}
 
-Hoy en día la industria del videojuego es uno de los mercados más potentes de nuestra economía. Con el paso de los años este sector se ha ido extendiendo y normalizando hasta llegar al punto en el que se ha convertido en algo que aparece con total normalidad en nuestra vida cotidiana.
+Hoy en día la industria del videojuego es uno de los mercados más potentes de nuestra economía. Con el paso de los años este sector se ha ido extendiendo y normalizando hasta llegar al punto en el que se ha convertido en algo que aparece con total normalidad en nuestra vida cotidiana. Hay todo tipo de juegos, desde sencillos juegos de móviles a grandes producciones que no tienen nada que enviar a las grandes películas con presupuestos millonarios de Hollywood, no es de extrañar que mucha gente haya empezado a considerar el videojuego como \textit{el décimo arte.}
+\\
 
-Hay todo tipo de juegos, desde sencillos juegos de móviles a grandes producciones que no tienen nada que enviar a las grandes películas con presupuestos millonarios de Hollywood, no es de extrañar que mucha gente considere el videojuego como \textit{el décimo arte.}
+Dentro de todos los tipos de videojuegos, hay un género que me interesa especialmente, y es el género del videojuego de terror. Los videojuegos cuentan con una ventaja sobre otros medios audiovisuales como, por ejemplo, el cine, y es que son mucho más inmersivos porque la persona jugando forma parte de la experiencia, no es un mero espectador. Este es un hecho que favorece especialmente al género de terror, y que se acentúa aún más con la llegada de los recientes dispositivos de realidad virtual.
+\\
 
-\section{Estructura de un \ac{TFG}}
+\textbf{"\nombreJuego"} es un videojuego que se aprovecha de esto último, inspirándose en otros grandes juegos del género para alcanzar la mayor calidad posible.
+\\
 
-En caso de que el \ac{TFG}/\acs{TFM} tenga como finalidad la elaboración de un proyecto o un 
-informe científico o técnico, deberá ajustarse a lo dispuesto en las normas UNE 
-157001:2002 y UNE 50135:1996 respectivamente.
 
-Si el \ac{TFG}/\ac{TFM} tiene por finalidad la elaboración de un trabajo monográfico, el 
-documento presentado deberá constar de las siguientes partes, teniendo como base la 
-norma UNE 50136:1997.
+El \textbf{documento} se estructura de la siguiente forma:
 
 \begin{description}
-\item[Preámbulo:] se describirán brevemente la motivación que ha originado la realización del \ac{TFG}/\acs{TFM}, así como de una breve descripción de los objetivos generales que se quieren alcanzar con el trabajo presentado.
-\item[Agradecimientos:] se podrá añadir las hojas necesarias para realizar los agradecimientos, a veces obligatorios, a las entidades y organismos colaboradores.
-\item[Dedicatoria:] se podrá añadir una única hoja con dedicatorias, su alineación será derecha y centradas de forma distribuida en la página.
-\item[Citas:] (frases célebres) se podrá añadir una única hoja con citas, su alineación será derecha y centradas de forma distribuida en la página.
-\item[Índices:] cada índice debe comenzar en una nueva página, se incluirán los índices que se estimen necesarios (conforme UNE 50111:1989), en este orden:
+\item[Marco teórico:] En este apartado se estudiará el concepto de videojuego, así como otros videojuegos que son referentes para el mismo.
+\item[Objetivos:] En este punto se analizan los diferentes objetivos que se persiguen en la realización de este \ac{TFG}.
+\item[Metodología:] Aquí explicaré la metodología que se ha seguido y las herramientas que se han utilizado en la misma.
+\item[Cuerpo:] En esta parte se hablará del plan de trabajo seguido, se detallará el \ac{GDD} y todo lo relacionado con el desarrollo del juego, desde las mecánicas hasta su apartado artístico.
+
+
+
+\begin{comment}
+
+
 \begin{description}
 \item[Índice de contenidos:] (obligatorio siempre) se incluirá un índice de las secciones de las que se componga el documento, la numeración de las 
 divisiones y subdivisiones utilizarán cifras arábigas (según UNE 50132:1994) y harán mención a la página del documento donde se ubiquen.
@@ -43,8 +46,9 @@ divisiones y subdivisiones utilizarán cifras arábigas (según UNE 50132:1994) 
 
 
 \item[Anexos:] se podrá incluir los anexos que se consideren oportunos.
-
+\end{comment}
 \end{description}
 
+\textbf{REVISAR CUANDO SE HAYA TERMINADO EL DOCUMENTO}
 
 
