--- a/Documentación LaTex/capitulos/marcoteorico.tex
+++ b/Documentación LaTex/capitulos/marcoteorico.tex
@@ -1,6 +1,162 @@
-\chapter{Marco Teórico}
+\chapter{Marco Teórico o  Estado del arte}
 \label{marcoteorico}
 
+En este apartado hablaré del concepto de videojuego y lo que define a un juego del género de terror. Para ello buscaré ejemplos en la industria, desde pequeños juegos realizados por estudios independientes (\textit{indies}) hasta grandes producciones de videojuegos realizadas por las principales empresas del sector.
+
+\section{¿Que es un videojuego?}
+
+Basta con buscar un poco por Internet para encontrar la siguiente definición de videojuego:
+\\
+
+\textit{Un videojuego es un juego electrónico en el que una o más personas interactúan, por medio de un controlador, con un dispositivo que muestra imágenes de vídeo. Este dispositivo electrónico puede ser una computadora, una máquina arcade, una videoconsola o un dispositivo portátil.}\footnote{Definición encontrada en la página de la Wikipedia: \url{https://es.wikipedia.org/wiki/Videojuego}.}
+\\
+
+Cada medio o autor usa sus propias palabras para definir lo que es un videojuego, sin embargo esta podría ser considerada la definición básica del término.
+\\
+
+A pesar de que ya habían juegos antes que ellos, los primeros videojuegos que triunfaron entre el gran público fueron juegos como \textit{Computer Space} (1971) o \textit{Pong} (1972). Este último tuvo especial éxito, siendo considerado como el juego más importante de la primera generación de videojuegos.
+\\
+
+El \textit{Pong} es un juego muy simple: es un juego de deportes de dos dimensiones que consiste en mover verticalmente una paleta para golpear una pelota y enviarla al campo del contrario. Cada vez que un jugador falla en golpear la bola el contrincante anota un punto, gana el jugador con más puntos.
+\\
+
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.3]{imagenes/Pong.png}
+		\caption{\textit{Pong}, el primer videojuego con un gran éxito comercial.}
+		\label{spacewar}
+	\end{center}
+\end{figure}
+
+El \textit{Pong} es un claro ejemplo de que con el paso de los años los videojuegos han evolucionado en todos los sentidos y se han hecho más accesibles entre el gran público. Al tener más éxito la industria ha concebido juegos cada vez más complejos.
+\\
+
+Hoy en día existen juegos de multitud de géneros como resultado de esa larga evolución, lejos queda ya esa época en la que el género Arcade eclipsaba todo el panorama de videojuegos, ahora existen un gran número de juegos capaces de contarte multitud de historias y con una amplia variedad de géneros y mecánicas.
+\\
+
+
+\section{Videojuego de terror}
+
+El videojuego de terror ha evolucionado también mucho en los últimos años, los que podrían ser considerados los padres del género (como Resident Evil o Silent Hill) ya no tienen tanta relevancia en el espectro actual, aunque siguen siendo muy influyentes. 
+\\
+
+Para la realización de este videojuego se han observado y analizado un gran número de juegos de miedo, la mayoría son juegos recientes que aprovechan las últimas tendencias y cuyas mecánicas se pueden adaptar a la realidad virtual:
+
+\begin{itemize}
+	\item Outlast
+	\item P.T.
+	\item Alien: Isolation
+	\item The Evil Within
+	\item Resident Evil VII
+\end{itemize}
+
+\subsection{Outlast}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.2]{imagenes/Outlast.jpg}
+		\caption{Imagen \textit{in-game} de \textit{Outlast}.}
+		\label{outlast}
+	\end{center}
+\end{figure}
+
+Outlast es un videojuego de terror en primera persona desarrollado por el estudio canadiense \textit{Red Barrels Games} en 2013. En este juego eres un periodista encerrado en un psiquiátrico sobrenatural. 
+\\
+
+Este juego tiene varias mecánicas interesantes, en primer lugar, todo el juego gira en función a una cámara de vídeo que llevamos encima, ya que tiene visión nocturna y nos permite ver en los lugares más oscuros, por lo que es importante rastrear el escenario en busca de baterías para la cámara.
+\\
+
+Otro punto interesante de este juego es que no hay ninguna manera de atacar a los enemigos, por lo que siempre que te encuentras una amenaza tienes que huir. Esta mecánica, aunque puede llegar a ser frustrante, aumenta la sensación de infedensión, por lo que el miedo que se experimenta jugando es mucho mayor, ya que te sientes mucho más expuesto. Esta es una mecánica que me ha convencido y que se lleva practicando en algunos juegos desde hace un tiempo, por lo que he decidido implementarla en \textbf{\nombreJuego}.
+\\
+
+\subsection{P.T.}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.50]{imagenes/PT.jpg}
+		\caption{Imagen \textit{in-game} de \textit{P.T.}}
+		\label{PT}
+	\end{center}
+\end{figure}
+
+Este juego me parece especialmente interesante, ya que no es un videojuego como tal, sino un \textit{teaser} de lo que iba a ser un nuevo \textit{Silent Hill} que nunca llego a ver la luz.
+\\
+
+Este juego fue desarrollado por \textbf{Hideo Kojima}, director de los famosos \textit{Metal Gear}, en colaboración con Guillermo Del Toro, director de películas como \textit{HellBoy} o \textit{Pacific Rim}. El juego estuvo disponible de manera gratuita durante un tiempo en 2014 y fue un éxito por parte del público y la crítica.
+\\
+
+Es un juego en tercera persona que transcurre en una pequeña casa donde ocurren fenómenos paranormales.Para superar el juego el jugador debe avanzar por las estancias de la casa superando algunos puzles. Este juego tampoco tiene una mecánica que implique usar la violencia, volviendo a esa sensación de indefensión que he mencionado anteriormente. Es un juego muy corto y que provoca un miedo principalmente atmosférico, causando una tensión constante en el jugador.
+\\
+
+Quiero destacar este juego porque me ha parecido especialmente interesante, sobre todo por la atmósfera y el arte, por lo que es uno de los principales referentes de \textbf{\nombreJuego}.
+\\
+
+\subsection{Alien: Isolation}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.16]{imagenes/alien.jpg}
+		\caption{Imagen \textit{in-game} de \textit{Alien: Isolation}.}
+		\label{alien}
+	\end{center}
+\end{figure}
+
+Este juego desarrollado por \textit{The Creative Assembly} en 2014 es un juego de terror y sigilo en primera persona basado en la franquicia de películas \textit{Alien}.
+\\
+
+Este juego transcurre en una nave destrozada en la que está libre el \textit{xenomorfo}, la principal mecánica del videojuego consiste en esconderse y escapar del alien. 
+\\
+
+Aunque en este juego si que dispones de herramientas para defenderte, a la hora de la verdad resultan inútiles contra el enemigo y tu mejor baza que tienes es escapar; otra vez más se repite ese sentimiento de desprotección, lo que aumenta considerablemente el miedo y la tensión al jugar.
+
+\subsection{The Evil Within}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.52]{imagenes/EvilWithin.jpg}
+		\caption{Imagen \textit{in-game} de \textit{The Evil Within}.}
+		\label{EvilWithin}
+	\end{center}
+\end{figure}
+
+\textit{The Evil Within} es un juego bastante diferente a los anteriores, ya que incluye muchas mecánicas y partes de acción. No obstante es un juego destacable ya que ha tenido cierto éxito desde su salida en 2014.
+\\
+
+Este juego fue desarrollado por Shinji Mikami, creador de la saga \textit{Resident Evil}, unos de los padres del género. Es un juego de terror y acción en tercera persona, trata de un agente de policía que se tiene que enfrentar a ciertos fenómenos paranormales. En este juego te enfrentas directamente a muchos enemigos, usando armas de fuego o de cuerpo a cuerpo, además tienes que resolver un buen número de puzles para completar el juego.
+\\
+
+Este juego destaca entre otras cosas por lo grotesco de los enemigos y los escenarios, cuenta con un apartado artístico muy desagradable, proporcionando una sensación de incomodidad constante al jugador. Esto último resulta muy interesante, pero he decidido no incluir nada parecido en \nombreJuego, ya que las características de los juegos que he hablado anteriormente me han convencido más. No obstante, me ha parecido un juego con algunas propuestas interesantes e ideas que se pueden adaptar a \textbf{\nombreJuego}.
+
+\subsection{Resident Evil VII}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.65]{imagenes/REVII.jpg}
+		\caption{Imagen \textit{in-game} de \textit{Resident Evil VII}.}
+		\label{ResidentEvil}
+	\end{center}
+\end{figure}
+
+Para concluir este apartado, quiero mencionar el que es el principal referente para \textbf{\nombreJuego} junto a P.T. El Resident Evil VII es un juego que salió el pasado año y que supone la vuelta de la principal franquicia de juegos de terror.
+\\
+
+Este es un juego muy interesante, ya que toma las principales mecánicas de los juegos de terror en los últimos años y se adapta a ellas manteniendo la esencia de la franquicia.
+\\
+
+Es un juego en primera persona con mecánicas de acción con disparos que se desarrolla en una mansión. Para avanzar por la casa tienes que ir resolviendo ciertos puzles que desbloquean nuevas estancias y que hacen que avance la trama del juego. En este sentido el juego es muy semejante a P.T., ya que ambos juegos desarrollan la acción en un recinto cerrado donde la ambientación y la atmósfera de la casa ponen en una tensión constante al jugador.
+\\
+Quiero destacar además que este juego es totalmente compatible con dispositivos de realidad virtual, estando ya disponible para las gafas \textit{Playstation VR} y en un futuro para otros dispositivos.
+\\
+
+
+
+
+
+
+
+
+\begin{comment}
 El contenido de este capítulo es una especie de muestrario de cosas que puedes hacer con \LaTeX.  Por ejemplo, incluir una cita bibliográfica   \cite{BOE_IM_UA} dentro del texto. En esta página de demostración también puedes encontrar información útil acerca de cómo escribir con  \LaTeX.\footnote{En http://metodos.fam.cie.uva.es/~latex/apuntes/apuntes.html hay unos buenos apuntes al respecto.}
 \section{Listas}
 Hacer una lista es simple en \LaTeX. Para ello has de crear un entorno (así se llama) itemize con
@@ -191,5 +347,6 @@ Ejemplo de código en PHP para escribir tu primer programa en este lenguaje. Cop
  Obtendremos: 
  
 El \ac{IEEE} es una institución muy importante en el mundo de la ingeniería. El \ac{IEEE} lleva marcando normas y protocolos desde hace mucho tiempo. Pero el \acl{IEEE} no está solo en esta tarea. Además del \ac{IEEE} hay muchas otras instituciones para ello.
- 
+
+\end{comment}
  
