Redactado hasta la mitad del punto 5

--- a/Documentación LaTex/capitulos/bibliografia.tex
+++ b/Documentación LaTex/capitulos/bibliografia.tex
@@ -20,3 +20,55 @@ P.T.:
 Alien: Isolation:
 
 \url{https://es.wikipedia.org/wiki/Alien:_Isolation}
+
+Motor de videojuegos:
+
+\url{https://en.wikipedia.org/wiki/Game_engine}
+
+Unity:
+
+\url{https://es.wikipedia.org/wiki/Unity_(motor_de_juego)}
+
+Unreal Engine 4:
+
+\url{https://es.wikipedia.org/wiki/Unreal_Engine}
+
+\url{https://www.unrealengine.com/en-US/blog}
+
+Modelado 3D:
+
+\url{https://es.wikipedia.org/wiki/Modelado_3D}
+
+Blender:
+
+\url{https://es.wikipedia.org/wiki/Blender}
+
+Maya:
+
+\url{https://es.wikipedia.org/wiki/Autodesk_Maya}
+
+3ds Max:
+
+\url{https://es.wikipedia.org/wiki/Autodesk_3ds_Max}
+
+\url{https://en.wikipedia.org/wiki/Autodesk_3ds_Max}
+
+Texturizado:
+
+\url{https://en.wikipedia.org/wiki/Texture_mapping}
+
+\url{https://es.wikipedia.org/wiki/Textura_(gr%C3%A1ficos_por_computadora)}
+	
+Substance painter:
+
+\url{https://www.allegorithmic.com/products/substance-painter}
+
+Mudbox:
+
+\url{https://en.wikipedia.org/wiki/Autodesk_Mudbox}
+
+GDD:
+
+\url{http://www.hagamosvideojuegos.com/2015/06/como-crear-un-documento-de-diseno-de.html}
+
+\url{https://eldocumentalistaudiovisual.com/2015/02/06/documentacion-en-videojuegos-documento-de-diseno-gdd/}
