--- a/Documentación LaTex/capitulos/metodologia.tex
+++ b/Documentación LaTex/capitulos/metodologia.tex
@@ -1,7 +1,74 @@
 \chapter{Metodología}
 
+A continuación hablaré de la gestión del proyecto y la metodología del desarrollo, así como del control de versiones y repositorio de este \ac{TFG}.
+
+\section{Metodología del desarrollo}
+
+Para el desarrollo del desarrollo de este proyecto he usado la metodología \textit{Kanban}, una metodología ágil basada en tableros y etiquetas. Para ello usaremos \textit{Trello}, una herramienta de gestión de proyectos que utiliza esta metodología de manera cómoda y práctica.
+
+\subsection{¿Qué es Kanban?}
+
+\textit{\textbf{Kanban}} es una metodología ágil creada hace muchos años en el seno de \textit{Toyota} y que ha sido usada durante décadas para mantener la línea de producción.
+\\
+
+Se basa en las siguientes ideas:
+
+\begin{itemize}
+	\item Permite tener una visualización del trabajo realizado.
+	\begin{itemize}
+		\item Divide todo el trabajo en ítems o tarjetas.
+		\item Utiliza diferentes columna para poder visualizar en que parte del flujo de trabajo está cada ítem.
+	\end{itemize}
+	\item Mide y gestiona el flujo de trabajo.
+	\item Permite identificar oportunidades de mejora.
+\end{itemize}
 
 
+Es una metodología muy útil y adecuada para este proyecto, ya que está pensada para equipos pequeños y que permite cambios imprevistos con mayor facilidad que otras metodologías.
+\\
+
+Un ejemplo de uso de esta metodología es el siguiente:
+
+\begin{enumerate}
+	\item Se crean tarjetas con tareas a realizar.
+	\item Se mueven esas tarjetas a la columna \textit{Working} una vez que se empieza a trabajar con ellas.
+	\item Cuando se termina con esa tarea se mueve la tarjeta a la columna \textit{Done}.
+	\item Por último, se vuelve a escoger tareas en las que trabajar y se repite los pasos anteriores, así hasta la finalización del proyecto.
+\end{enumerate}
+	
+\section{Gestión del proyecto}
+
+\begin{figure}
+	\begin{center}
+		\includegraphics[scale=0.28]{imagenes/trello.jpg}
+		\caption{Captura de pantalla de un tablero de \textit{Trello} de un proyecto anterior.}
+		\label{trello}
+	\end{center}
+\end{figure}
+
+El \ac{TFG} ha sido desarrollado usando la herramienta de gestión de proyectos \textit{Trello}, que nos permite crear tableros, etiquetas para las tareas y columnas en las que colocarlas. \textit{Trello} aporta una gran multitud de opciones con la que gestionar nuestros trabajos, como dividir las tareas en subtareas, clasificarlas por grupos o ponerles fechas límite o \textit{deadlines}.
+\\
+
+\textit{Trello} es una herramienta muy útil que he usado en anterioridad en otros trabajos y que resulta muy cómoda a la hora de gestionar el trabajo del proyecto.
+
+\section{Control de versiones y repositorio}
+	
+Puesto que este es un trabajo individual no es necesario usar un sistema de control de versiones, no obstante, para mayor seguridad y para tener todo el contenido del proyecto disponible en Internet se ha decidido crear un repositorio en \textit{Github}.
+De este modo siempre habrá una copia de seguridad disponible, además de que se puede volver a un momento anterior del proyecto si es necesario.
+\\
+
+El enlace del repositorio es el siguiente:
+\\
+
+\url{https://github.com/JoseLuisMunozP/TFG}
+
+	
+	
+	
+	
+	
+	
+	
 \begin{comment}
 
 
